@@ -14,6 +14,7 @@ LXPanel - Lightweight X11 desktop panel
     Giuseppe Penone <giuspen@gmail.com>
     Piotr Sipika <piotr.sipika@gmail.com>
     Raimar Bühmann <raimar@buehmann.de>
+    Peter <ombalaxitabou@users.sf.net>
 
 [History]
 LXPanel is a derivative work from fbpanel [1] written by Anatoly Asviyan,
